--- a/javascript/date-picker/index.html
+++ b/javascript/date-picker/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="picker">h</div>
+    </div>
     <script defer src="script.js"></script>
   </body>
 </html>
