--- a/javascript/date-picker/index.html
+++ b/javascript/date-picker/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="picker">h</div>
+      <div class="picker">
+        <h2>Date</h2>
+      </div>
     </div>
     <script defer src="script.js"></script>
   </body>
