--- a/javascript/date-picker/index.html
+++ b/javascript/date-picker/index.html
@@ -9,9 +9,14 @@
   <body>
     <div class="container">
       <div class="picker">
-        <h2>Date</h2>
+        <h2>Difference between</h2>
+        <input type="text" id="datepicker" readonly />
+        <div>
+          <input type="text" name="date1" id="date1" />
+          <input type="text" name="date2" id="date2" />
+        </div>
       </div>
     </div>
-    <script defer src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
